# word-wheels

./: .gitignore  Cargo.toml  README.md  check_levels.py
.github/workflows/: android.yml  ios.yml
android/: Cargo.toml
android-native/: SIGNING.md  settings.gradle.kts
android-native/app/: build.gradle.kts  proguard-rules.pro
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-v31/: styles.xml
android/src/lib/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: _config.yml  index.md  play-store-submission-guide.md  privacy-policy.md
ios/: Cargo.toml
ios-native/: README.md  project.yml
ios-native/WordWheel/: Info.plist  WordWheelApp.swift
ios-native/WordWheel/Audio/: SoundManager.swift
ios-native/WordWheel/Models/: Dictionary.swift  Difficulty.swift  GameState.swift  Level.swift
ios-native/WordWheel/Resources/: dictionary.txt
ios-native/WordWheel/Storage/: GameStorage.swift
ios-native/WordWheel/Theme/: GameColors.swift
ios-native/WordWheel/Views/: Backgrounds.swift  BottomButtons.swift  CoinInfoDialog.swift  TopBar.swift  (+9 more)
ios/src/: lib.rs
play-store-assets/: README.md  content-rating.md  release-notes.md  store-listing.md
play-store-assets/screenshots/: README.md  generate-mockups.py
src/: lib.rs  main.rs
tools/: generate_levels.py  levels.json  validate_levels.py
tools/dictionary/: build_dictionary.py  nsfw-supplement.txt
web/: Cargo.toml  index.html
web/src/: lib.rs
(+44 files in other folders)
