[package]
name = "word_wheel_crossword"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "word_wheel_crossword"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = []
android = ["eframe/android-game-activity"]

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
winit = "0.30.12"
