[workspace]
members = [
    "core",
    "desktop",
    "web",
]
resolver = "2"

[workspace.dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
