[package]
name = "word_wheel_android"
version = "0.1.0"
edition = "2021"

[lib]
name = "word_wheel_crossword"
crate-type = ["cdylib"]
path = "src/lib/lib.rs"

[features]
default = ["android"]
android = ["eframe/android-native-activity"]

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
word_wheel_core = { path = "../core" }
winit = { version = "0.30", default-features = false }
android_logger = "0.14"
log = "0.4"
